--- a/prijateli_tree/app/locales/en.yml
+++ b/prijateli_tree/app/locales/en.yml
@@ -33,3 +33,9 @@ en:
     colors_in_bag: "What colors are the balls in the blue bag?"
     four_blue_two_red: "4 blue and 2 red"
     three_blue_four_red: "3 blue and 4 red"
+    five_blue_two_red: "5 blue and 2 red"
+
+  eighth_screen:
+    what_will_you_observe: "What will you observe to help you learn which bag the computer chose?"
+
+  
