Adding nineteenth screen

--- a/prijateli_tree/app/locales/en.yml
+++ b/prijateli_tree/app/locales/en.yml
@@ -77,6 +77,9 @@ en:
     the_computer_chose_blue: "The computer chose the BLUE bag."
 
 
+  nineteenth_screen:
+    now_we_practiced: "Now that we practiced, we will play the real games."
+    get_ready: "Get ready to win and earn money!!!"
 
 
   
