--- a/prijateli_tree/app/locales/en.yml
+++ b/prijateli_tree/app/locales/en.yml
@@ -102,7 +102,7 @@ en:
 
   final_score:
     congratulations: "Congratulations!"
-    you_guessed_correctly: "You guessed correctly in {X} games, and earned {x} points, which means you made extra"
+    you_guessed_correctly: "You guessed correctly in {X} games, and earned {x} points, which means you made extra."
     denars: "{X} denars!"
     ask_your_teachers: "Ask your teachers about getting your reward!"
 
