--- a/prijateli_tree/app/locales/tr.yml
+++ b/prijateli_tree/app/locales/tr.yml
@@ -1,109 +1,109 @@
 tr:
   homepage:
-    login:
-    facilitators:
-    school:
-    student_name:
-    student_language:
-    facilitator_username:
-    facilitator_password:
+    login: "Giriş Yap"
+    facilitators: "Sadece eğitimciler için!"
+    school: "Okul"
+    student_name: "Ad ve soyad"
+    student_language: "Öğrencinin dili"
+    facilitator_username: "Eğitimcinin kullanıcı adı"
+    facilitator_password: "Eğitimcinin Şifresi"
 
   ready_to_play:
-    get_ready:
-    im_ready:
+    get_ready: "Kırmızı mı Mavi mi oynamaya hazır olun!"
+    im_ready: "Ben hazırım!"
 
   waiting_screen:
-    waiting:
+    waiting: "Başkalarını bekliyorum..."
 
   rules_screen:
-    how_to_play:
-    instructions:
-    i_understand:
-    next:
+    how_to_play: "Nasıl oynanır?"
+    instructions: "Videoyu istediğiniz kadar tekrar oynatabilirsiniz. Kuralları bilmemek kazanma şansınızı azaltır. Oyunla ilgili sorularınız varsa öğretmeninize sorun."
+    i_understand: "Kuralları anlıyorum!"
+    next: "Sonraki"
 
   quiz_colors:
-    quick_quiz:
-    question:
-    instructions:
-    red_and_blue:
-    green_and_yellow:
-    black_and_white:
+    quick_quiz: "Hızlı sınav!"
+    question: "Soru"
+    instructions: "Kazanmak için bilgisayarın seçtiği torbayı seçmelisiniz. Bilgisayarın seçtiği torbalar ne renkler?"
+    red_and_blue: "Kırmızı ve Mavi."
+    green_and_yellow: "Yeşil ve Sarı."
+    black_and_white: "Siyah ve Beyaz."
 
   quiz_balls:
-    colors_in_bag:
-    four_blue_two_red:
-    three_blue_four_red:
-    five_blue_two_red:
+    colors_in_bag: "Mavi torbadaki toplar hangi renktir?"
+    four_blue_two_red: "4 mavi ve 2 kırmızı."
+    three_blue_four_red: "3 mavi ve 4 kırmızı."
+    five_blue_two_red: "5 mavi ve 2 kırmızı."
 
   quiz_peers:
-    what_will_you_observe:
-    one_ball_few_peers:
-    two_balls:
-    one_ball_all_peers:
+    what_will_you_observe: "Bilgisayarın hangi torbayı seçtiğini öğrenmenize yardımcı olacak neyi gözlemleyeceksiniz?"
+    one_ball_few_peers: "Bir top ve birkaç akran tahminleri."
+    two_balls: "İki top."
+    one_ball_all_peers: "Bir top ve tüm akranların tahminleri."
 
   intro_practice:
-    now_you_will_play:
-    since_these_rules:
+    now_you_will_play: "Şimdi kurallara alışmak için 2 alıştırma oyunu oynayacaksınız."
+    since_these_rules: "Bunlar alıştırma turları olduğu için kimseyi performansından dolayı ödüllendirmeyeceğiz."
 
   practice_game_video:
-    practice_game:
-    explanation:
-    score:
-    feel_free:
+    practice_game: "Practice Game."
+    explanation: "Açıklama."
+    score: "Skor."
+    feel_free: "Kuralları kendinize hatırlatmak için videoyu tekrar izlemekten çekinmeyin."
 
   practice_game_first_round:
-    round:
-    the_computer_chose:
-    your_ball_is_red:
-    your_ball_is_blue:
-    guess_color:
-    red:
-    blue:
+    round: "Yuvarlak"
+    the_computer_chose: "Bilgisayar bir torba seçti ve topları her oyuncuya rastgele bölüştürdü."
+    your_ball_is_red: "Topunuz KIRMIZI."
+    your_ball_is_blue: "Topunuz MAVİ."
+    guess_color: "Torbanın rengini tahmin edin:"
+    red: "KIRMIZI."
+    blue: "MAVİ."
 
   practice_game_other_rounds:
-    see_what_others_guessed:
-    code_guessed_red:
-    code_guessed_blue:
-    name_guessed_red:
-    name_guessed_blue:
-    your_guess_was_red:
-    your_guess_was_blue:
+    see_what_others_guessed: "Son turda diğer bazı oyuncuların neler tahmin ettiğini görün:"
+    code_guessed_red: "{Ad/Sifre}, {KIRMIZI/MAVI} tahminini yaptı."
+    code_guessed_blue: "{Ad/Sifre}, {KIRMIZI/MAVI} tahminini yaptı."
+    name_guessed_red: "Ad, KIRMIZI tahminini yaptı."
+    name_guessed_blue: "Ad, MAVI tahminini yaptı."
+    your_guess_was_red: "Your guess in the last round was RED."
+    your_guess_was_blue: "Your guess in the last round was BLUE."
 
   practice_game_results:
-    results:
-    you_won:
-    better_luck:
-    the_computer_chose_red:
-    the_computer_chose_blue:
+    results: "Results"
+    you_won: "Kazandın!"
+    better_luck: "Bir dahaki sefere iyi şanslar!"
+    the_computer_chose_red: "Bilgisayar KIRMIZI çantayı seçti."
+    the_computer_chose_blue: "Bilgisayar MAVİ çantayı seçti."
 
   real_game_intro:
-    now_we_practiced:
-    get_ready:
-    if_you_win:
-    game:
-    added_points:
+    now_we_practiced: "Artık antrenman yaptığımıza göre gerçek oyunları oynayacağız."
+    get_ready: "Kazanmaya ve para kazanmaya hazır olun!"
+    if_you_win: "Bu oyunu kazanırsanız puanınıza ve son ödülünüze {X} puan eklenecek."
+    game: "Oyun"
+    added_points: "Son ödülünüze {X} puan eklenecek."
 
   different_game_intro:
-    different_version:
-    instead_of:
+    different_version: "Şimdi oyunun farklı bir versiyonunu oynayacağız."
+    instead_of: "Gözlemlediğiniz oyuncuları size rastgele atamak yerine, gözlemlediğiniz oyuncuları seçmenize izin vereceğiz."
 
   different_game_choices:
-    now_you_can_observe:
-    please_choose_players:
-    player_one:
-    player_two:
-    player_three:
+    now_you_can_observe: "Artık bu oyunda ilerleyen turlarda gözlemleyeceğiniz oyuncuları seçebilirsiniz."
+    please_choose_players: "Lütfen {X} oyuncu seçin."
+    player_one: "Oyuncu 1:"
+    player_two: "Oyuncu 2:"
+    player_three: "Oyuncu 3:"
 
   survey:
-    before_we_are_done:
-    survey_page:
+    before_we_are_done: "Bitirmeden önce size bugün nasıl oynadığınıza dair birkaç kısa soru sormak istiyoruz."
+    survey_page: "Anket Sayfası"
 
   final_score:
-    congratulations:
-    you_guessed_correctly:
-    denars:
-    ask_your_teachers:
+    congratulations: "Tebrikler!"
+    you_guessed_correctly: "{X} oyunda doğru tahmin ettiniz ve {x} puan kazandınız, bu da ekstra kazandığınız anlamına geliyors."
+    denars: "{X} dinar!"
+    ask_your_teachers: "Öğretmenlerinize ödülünüzü nasıl alacağınızı sorun!"
 
   thanks_screen:
-    thanks:
-    have_a_great_day:
+    thanks: "Oynadığınız için teşekkürler!"
+    have_a_great_day: "İyi günler!"
