--- a/prijateli_tree/app/languages/al.json
+++ b/prijateli_tree/app/languages/al.json
@@ -1,111 +1,113 @@
 {
-  "different_game_choices": {
-    "now_you_can_observe": "Tani mund t\u00eb zgjidhni lojtar\u00ebt q\u00eb do ti v\u00ebzhgoni n\u00eb raundet vijuese n\u00eb k\u00ebt\u00eb loj\u00eb.",
-    "player_one": "Lojtari 1:",
-    "player_three": "Lojtari 3:",
-    "player_two": "Lojtari 2:",
-    "please_choose_players": "Zgjidh {X} lojtar\u00eb."
-  },
-  "different_game_intro": {
-    "different_version": "Now we will play a different version of the game.",
-    "instead_of": "Instead of assigning you the peers you observe randomly, we will let you choose the players you observe."
-  },
-  "final_score": {
-    "ask_your_teachers": "Pyetni m\u00ebsimdh\u00ebn\u00ebsin tuaj p\u00ebr marrjen e shp\u00ebrblimit tuaj!",
-    "congratulations": "Urime!",
-    "denars": "{X} denar\u00eb!",
-    "you_guessed_correctly": "Keni q\u00eblluar sakt\u00eb n\u00eb {X} loj\u00ebra dhe keni fituar {x} pik\u00eb, q\u00eb do t\u00eb thot\u00eb se keni fituar ekstra"
-  },
-  "homepage": {
-    "facilitator_password": "Fjal\u00ebkalimi i trajnuesit",
-    "facilitator_username": "Emri i p\u00ebrdoruesit i trajnuesit",
-    "facilitators": "Vet\u00ebm p\u00ebr trajnues!",
-    "login": "Ky\u00e7u",
-    "school": "Shkolla",
-    "student_language": "Gjuha e nx\u00ebn\u00ebsit",
-    "student_name": "Emri dhe mbiemri"
-  },
-  "intro_practice": {
-    "now_you_will_play": "Tani do t\u00eb luani 2 loj\u00ebra p\u00ebr ushtrim p\u00ebr t'i m\u00ebsuar rregullat.",
-    "since_these_rules": "Pasiq\u00eb k\u00ebto jan\u00eb raunde ushtruese, nuk do t\u00eb shp\u00ebrblejm\u00eb ask\u00ebnd p\u00ebr performanc\u00ebn e tyre."
-  },
-  "practice_game_first_round": {
-    "blue": "E KALT\u00cbR.",
-    "guess_color": "Gjeni ngjyr\u00ebn e \u00e7ant\u00ebs:",
-    "red": "E KUQE.",
-    "round": "Raundi",
-    "the_computer_chose": "Kompjutori zgjodhi nj\u00eb \u00e7ant\u00eb dhe ndau topat n\u00eb m\u00ebnyr\u00eb t\u00eb rast\u00ebsishme p\u00ebr secilin lojtar.",
-    "your_ball_is_blue": "Topi juaj \u00ebsht\u00eb I KALT\u00cbR.",
-    "your_ball_is_red": "Topi juaj \u00ebsht\u00eb I KUQ."
-  },
-  "practice_game_other_rounds": {
-    "code_guessed_blue": "Kodi q\u00eblloi E KALT\u00cbR.",
-    "code_guessed_red": "Kodi q\u00eblloi E KUQE.",
-    "name_guessed_blue": "Emri q\u00eblloi E KALT\u00cbR.",
-    "name_guessed_red": "Emri q\u00eblloi E KUQE.",
-    "see_what_others_guessed": "Shihni \u00e7far\u00eb supozuan disa lojtar\u00eb t\u00eb tjer\u00eb n\u00eb raundin e fundit:",
-    "your_guess_was_blue": "Supozimi juaj n\u00eb raundin e fundit ishte E KALT\u00cbR.",
-    "your_guess_was_red": "Supozimi juaj n\u00eb raundin e fundit ishte E KUQE."
-  },
-  "practice_game_results": {
-    "better_luck": "Fat m\u00eb t\u00eb mir\u00eb her\u00ebn tjet\u00ebr!",
-    "results": "Rezultatet",
-    "the_computer_chose_blue": "Kompjutori zgjodhi \u00e7ant\u00ebn T\u00cb KALT\u00cbR.",
-    "the_computer_chose_red": "Kompjutori zgjodhi \u00e7ant\u00ebn T\u00cb KUQE.",
-    "you_won": "Fituat!"
-  },
-  "practice_game_video": {
-    "explanation": "Sqairm.",
-    "feel_free": "Ndjehuni t\u00eb lir\u00eb ta shikoni videon p\u00ebrs\u00ebri p\u00ebr t'i p\u00ebrkujtuar rregullat.",
-    "practice_game": "Loj\u00eb per ushtrim.",
-    "score": "Rezultati."
-  },
-  "quiz_balls": {
-    "colors_in_bag": "\u00c7far\u00eb ngjyrash jan\u00eb topat n\u00eb \u00e7ant\u00ebn e kalt\u00ebr?",
-    "five_blue_two_red": "5 t\u00eb kaltra dhe 2 t\u00eb kuqe.",
-    "four_blue_two_red": "4 t\u00eb kaltra dhe 2 t\u00eb kuqe.",
-    "three_blue_four_red": "3 t\u00eb kaltra dhe 4 t\u00eb kuqe."
-  },
-  "quiz_colors": {
-    "black_and_white": "E zez\u00eb dhe e bardh\u00eb.",
-    "green_and_yellow": "E gjelb\u00ebr dhe e verdh\u00eb.",
-    "instructions": "P\u00ebr t\u00eb fituar, duhet t\u00eb zgjidhni \u00e7ant\u00ebn q\u00eb ka zgjedhur kompjutori. \u00c7far\u00eb ngjyrash jan\u00eb \u00e7antat q\u00eb zgjedh kompjutori?",
-    "question": "Pyetje",
-    "quick_quiz": "Kuiz i shpejt\u00eb!",
-    "red_and_blue": "E kuqe dhe e kalt\u00ebr."
-  },
-  "quiz_peers": {
-    "one_ball_all_peers": "Nj\u00eb top dhe t\u00eb gjitha supozimet e bashk\u00ebmoshatar\u00ebve.",
-    "one_ball_few_peers": "Nj\u00eb top dhe disa supozime t\u00eb bashk\u00ebmoshatar\u00ebve.",
-    "two_balls": "Dy topa.",
-    "what_will_you_observe": "\u00c7far\u00eb do t\u00eb v\u00ebzhgoni p\u00ebr t'ju ndihmuar t\u00eb m\u00ebsoni se cil\u00ebn \u00e7ant\u00eb ka zgjedhur kompjutori?"
-  },
-  "ready_to_play": {
-    "get_ready": "B\u00ebhuni gati p\u00ebr t\u00eb luajtur E kuqe ose E kalt\u00ebr!",
-    "im_ready": "Jam gati!"
-  },
-  "real_game_intro": {
-    "added_points": "{X} pik\u00eb do t'i shtohen shp\u00ebrblimit tuaj p\u00ebrfundimtar.",
-    "game": "Loj\u00eb",
-    "get_ready": "B\u00ebhuni gati p\u00ebr ta fituar loj\u00ebn dhe p\u00ebr t\u00eb fituar para!",
-    "if_you_win": "N\u00ebse fitoni n\u00eb k\u00ebt\u00eb loj\u00eb, {X} pik\u00eb do t'i shtohen rezultatit tuaj dhe shp\u00ebrblimit p\u00ebrfundimtar.",
-    "now_we_practiced": "Tani q\u00eb ushtruam, do t\u00eb luajm\u00eb loj\u00ebrat e v\u00ebrteta."
-  },
-  "rules_screen": {
-    "how_to_play": "Si t\u00eb luani?",
-    "i_understand": "I kuptoj rregullat!",
-    "instructions": "Mund ta rishikoni videon sa her\u00eb t\u00eb d\u00ebshironi. Mosnjohja e rregullave ul shansat p\u00ebr t\u00eb fituar. Pyesni m\u00ebsimdh\u00ebn\u00ebsin tuaj n\u00ebse keni ndonj\u00eb pyetje n\u00eb lidhje me loj\u00ebn.",
-    "next": "Vazhdo"
-  },
-  "survey": {
-    "before_we_are_done": "Para se t\u00eb p\u00ebrfundojm\u00eb, duam t'ju parashtrojm\u00eb disa pyetje t\u00eb shkurtra se si keni luajtur sot.",
-    "survey_page": "Faqe p\u00ebr hulumtim"
-  },
-  "thanks_screen": {
-    "have_a_great_day": "Kalofshi nj\u00eb dit\u00eb t\u00eb mir\u00eb!",
-    "thanks": "Ju faleminderit q\u00eb luajt\u00ebt!"
-  },
-  "waiting_screen": {
-    "waiting": "N\u00eb pritje t\u00eb t\u00eb tjer\u00ebve..."
+  "al": {
+    "homepage": {
+      "login": "Kyçu",
+      "facilitators": "Vetëm për trajnues!",
+      "school": "Shkolla",
+      "student_name": "Emri dhe mbiemri",
+      "student_language": "Gjuha e nxënësit",
+      "facilitator_username": "Emri i përdoruesit i trajnuesit",
+      "facilitator_password": "Fjalëkalimi i trajnuesit"
+    },
+    "ready_to_play": {
+      "get_ready": "Bëhuni gati për të luajtur E kuqe ose E kaltër!",
+      "im_ready": "Jam gati!"
+    },
+    "waiting_screen": {
+      "waiting": "Në pritje të të tjerëve..."
+    },
+    "rules_screen": {
+      "how_to_play": "Si të luani?",
+      "instructions": "Mund ta rishikoni videon sa herë të dëshironi. Mosnjohja e rregullave ul shansat për të fituar. Pyesni mësimdhënësin tuaj nëse keni ndonjë pyetje në lidhje me lojën.",
+      "i_understand": "I kuptoj rregullat!",
+      "next": "Vazhdo"
+    },
+    "quiz_colors": {
+      "quick_quiz": "Kuiz i shpejtë!",
+      "question": "Pyetje",
+      "instructions": "Për të fituar, duhet të zgjidhni çantën që ka zgjedhur kompjutori. Çfarë ngjyrash janë çantat që zgjedh kompjutori?",
+      "red_and_blue": "E kuqe dhe e kaltër.",
+      "green_and_yellow": "E gjelbër dhe e verdhë.",
+      "black_and_white": "E zezë dhe e bardhë."
+    },
+    "quiz_balls": {
+      "colors_in_bag": "Çfarë ngjyrash janë topat në çantën e kaltër?",
+      "four_blue_two_red": "4 të kaltra dhe 2 të kuqe.",
+      "three_blue_four_red": "3 të kaltra dhe 4 të kuqe.",
+      "five_blue_two_red": "5 të kaltra dhe 2 të kuqe."
+    },
+    "quiz_peers": {
+      "what_will_you_observe": "Çfarë do të vëzhgoni për t'ju ndihmuar të mësoni se cilën çantë ka zgjedhur kompjutori?",
+      "one_ball_few_peers": "Një top dhe disa supozime të bashkëmoshatarëve.",
+      "two_balls": "Dy topa.",
+      "one_ball_all_peers": "Një top dhe të gjitha supozimet e bashkëmoshatarëve."
+    },
+    "intro_practice": {
+      "now_you_will_play": "Tani do të luani 2 lojëra për ushtrim për t'i mësuar rregullat.",
+      "since_these_rules": "Pasiqë këto janë raunde ushtruese, nuk do të shpërblejmë askënd për performancën e tyre."
+    },
+    "practice_game_video": {
+      "practice_game": "Lojë per ushtrim.",
+      "explanation": "Sqairm.",
+      "score": "Rezultati.",
+      "feel_free": "Ndjehuni të lirë ta shikoni videon përsëri për t'i përkujtuar rregullat."
+    },
+    "practice_game_first_round": {
+      "round": "Raundi",
+      "the_computer_chose": "Kompjutori zgjodhi një çantë dhe ndau topat në mënyrë të rastësishme për secilin lojtar.",
+      "your_ball_is_red": "Topi juaj është I KUQ.",
+      "your_ball_is_blue": "Topi juaj është I KALTËR.",
+      "guess_color": "Gjeni ngjyrën e çantës:",
+      "red": "E KUQE.",
+      "blue": "E KALTËR."
+    },
+    "practice_game_other_rounds": {
+      "see_what_others_guessed": "Shihni çfarë supozuan disa lojtarë të tjerë në raundin e fundit:",
+      "code_guessed_red": "Kodi qëlloi E KUQE.",
+      "code_guessed_blue": "Kodi qëlloi E KALTËR.",
+      "name_guessed_red": "Emri qëlloi E KUQE.",
+      "name_guessed_blue": "Emri qëlloi E KALTËR.",
+      "your_guess_was_red": "Supozimi juaj në raundin e fundit ishte E KUQE.",
+      "your_guess_was_blue": "Supozimi juaj në raundin e fundit ishte E KALTËR."
+    },
+    "practice_game_results": {
+      "results": "Rezultatet",
+      "you_won": "Fituat!",
+      "better_luck": "Fat më të mirë herën tjetër!",
+      "the_computer_chose_red": "Kompjutori zgjodhi çantën TË KUQE.",
+      "the_computer_chose_blue": "Kompjutori zgjodhi çantën TË KALTËR."
+    },
+    "real_game_intro": {
+      "now_we_practiced": "Tani që ushtruam, do të luajmë lojërat e vërteta.",
+      "get_ready": "Bëhuni gati për ta fituar lojën dhe për të fituar para!",
+      "if_you_win": "Nëse fitoni në këtë lojë, {X} pikë do t'i shtohen rezultatit tuaj dhe shpërblimit përfundimtar.",
+      "game": "Lojë",
+      "added_points": "{X} pikë do t'i shtohen shpërblimit tuaj përfundimtar."
+    },
+    "different_game_intro": {
+      "different_version": "Now we will play a different version of the game.",
+      "instead_of": "Instead of assigning you the peers you observe randomly, we will let you choose the players you observe."
+    },
+    "different_game_choices": {
+      "now_you_can_observe": "Tani mund të zgjidhni lojtarët që do ti vëzhgoni në raundet vijuese në këtë lojë.",
+      "please_choose_players": "Zgjidh {X} lojtarë.",
+      "player_one": "Lojtari 1:",
+      "player_two": "Lojtari 2:",
+      "player_three": "Lojtari 3:"
+    },
+    "survey": {
+      "before_we_are_done": "Para se të përfundojmë, duam t'ju parashtrojmë disa pyetje të shkurtra se si keni luajtur sot.",
+      "survey_page": "Faqe për hulumtim"
+    },
+    "final_score": {
+      "congratulations": "Urime!",
+      "you_guessed_correctly": "Keni qëlluar saktë në {X} lojëra dhe keni fituar {x} pikë, që do të thotë se keni fituar ekstra",
+      "denars": "{X} denarë!",
+      "ask_your_teachers": "Pyetni mësimdhënësin tuaj për marrjen e shpërblimit tuaj!"
+    },
+    "thanks_screen": {
+      "thanks": "Ju faleminderit që luajtët!",
+      "have_a_great_day": "Kalofshi një ditë të mirë!"
+    }
   }
 }
