--- a/prijateli_tree/app/languages/en.json
+++ b/prijateli_tree/app/languages/en.json
@@ -1,111 +1,113 @@
 {
-  "different_game_choices": {
-    "now_you_can_observe": "Now you can choose the players you will observe in the following rounds in this game.",
-    "player_one": "Player 1:",
-    "player_three": "Player 3:",
-    "player_two": "Player 2:",
-    "please_choose_players": "Please choose {X} players"
-  },
-  "different_game_intro": {
-    "different_version": "Now, we will play a different version of the game.",
-    "instead_of": "Instead of assigning you the peers you observe randomly, we will let you choose the players you observe."
-  },
-  "final_score": {
-    "ask_your_teachers": "Ask your teachers about getting your reward!",
-    "congratulations": "Congratulations!",
-    "denars": "{X} denars!",
-    "you_guessed_correctly": "You guessed correctly in {X} games, and earned {x} points, which means you made extra."
-  },
-  "homepage": {
-    "facilitator_password": "Facilitator Password",
-    "facilitator_username": "Facilitator Username",
-    "facilitators": "Only for facilitators!",
-    "login": "Log In",
-    "school": "School",
-    "student_language": "Language of Student",
-    "student_name": "First and Last Name"
-  },
-  "intro_practice": {
-    "now_you_will_play": "Now you will play 2 practice games to get used to the rules.",
-    "since_these_rules": "Since these are practice rounds, we will not reward anyone for their performance."
-  },
-  "practice_game_first_round": {
-    "blue": "BLUE.",
-    "guess_color": "Guess the color of the bag:",
-    "red": "RED.",
-    "round": "Round",
-    "the_computer_chose": "The computer chose a bag and split the balls randomly to each player.",
-    "your_ball_is_blue": "Your ball is BLUE.",
-    "your_ball_is_red": "Your ball is RED."
-  },
-  "practice_game_other_rounds": {
-    "code_guessed_blue": "Code guessed BLUE.",
-    "code_guessed_red": "Code guessed RED.",
-    "name_guessed_blue": "Name guessed BLUE.",
-    "name_guessed_red": "Name guessed RED.",
-    "see_what_others_guessed": "See what some other players guessed in the last round:",
-    "your_guess_was_blue": "Your guess in the last round was BLUE.",
-    "your_guess_was_red": "Your guess in the last round was RED."
-  },
-  "practice_game_results": {
-    "better_luck": "Better luck next time!",
-    "results": "Results",
-    "the_computer_chose_blue": "The computer chose the BLUE bag.",
-    "the_computer_chose_red": "The computer chose the RED bag.",
-    "you_won": "You won!"
-  },
-  "practice_game_video": {
-    "explanation": "Explanation.",
-    "feel_free": "Feel free to watch the video again to remind yourself of the rules.",
-    "practice_game": "Practice Game.",
-    "score": "Score."
-  },
-  "quiz_balls": {
-    "colors_in_bag": "What colors are the balls in the blue bag?",
-    "five_blue_two_red": "5 blue and 2 red.",
-    "four_blue_two_red": "4 blue and 2 red.",
-    "three_blue_four_red": "3 blue and 4 red."
-  },
-  "quiz_colors": {
-    "black_and_white": "Black and White.",
-    "green_and_yellow": "Green and Yellow.",
-    "instructions": "To win, you have to pick the bag the computer chose. What colors are the bags the computer chooses?",
-    "question": "Question",
-    "quick_quiz": "Quick Quiz!",
-    "red_and_blue": "Red and Blue."
-  },
-  "quiz_peers": {
-    "one_ball_all_peers": "One ball and all peers' guesses.",
-    "one_ball_few_peers": "One ball and a few peers' guesses.",
-    "two_balls": "Two balls.",
-    "what_will_you_observe": "What will you observe to help you learn which bag the computer chose?"
-  },
-  "ready_to_play": {
-    "get_ready": "Get ready to play Red or Blue!",
-    "im_ready": "I'm ready!"
-  },
-  "real_game_intro": {
-    "added_points": "{X} points will be added to your final reward.",
-    "game": "Game",
-    "get_ready": "Get ready to win and earn money!",
-    "if_you_win": "If you win in this game, {X} points will be added to your score and final reward.",
-    "now_we_practiced": "Now that we practiced, we will play the real games."
-  },
-  "rules_screen": {
-    "how_to_play": "How to Play?",
-    "i_understand": "I understand the rules!",
-    "instructions": "You can replay the video as many times as you want. Not knowing the rules lowers your chances of winning. Ask your teacher if you have any questions about the game.",
-    "next": "Next"
-  },
-  "survey": {
-    "before_we_are_done": "Before we are done, we want to ask you a few short questions about how you played today.",
-    "survey_page": "Survey Page"
-  },
-  "thanks_screen": {
-    "have_a_great_day": "Have a great day!",
-    "thanks": "Thanks for playing!"
-  },
-  "waiting_screen": {
-    "waiting": "Waiting for others..."
+  "en": {
+    "homepage": {
+      "login": "Log In",
+      "facilitators": "Only for facilitators!",
+      "school": "School",
+      "student_name": "First and Last Name",
+      "student_language": "Language of Student",
+      "facilitator_username": "Facilitator Username",
+      "facilitator_password": "Facilitator Password"
+    },
+    "ready_to_play": {
+      "get_ready": "Get ready to play Red or Blue!",
+      "im_ready": "I'm ready!"
+    },
+    "waiting_screen": {
+      "waiting": "Waiting for others..."
+    },
+    "rules_screen": {
+      "how_to_play": "How to Play?",
+      "instructions": "You can replay the video as many times as you want. Not knowing the rules lowers your chances of winning. Ask your teacher if you have any questions about the game.",
+      "i_understand": "I understand the rules!",
+      "next": "Next"
+    },
+    "quiz_colors": {
+      "quick_quiz": "Quick Quiz!",
+      "question": "Question",
+      "instructions": "To win, you have to pick the bag the computer chose. What colors are the bags the computer chooses?",
+      "red_and_blue": "Red and Blue.",
+      "green_and_yellow": "Green and Yellow.",
+      "black_and_white": "Black and White."
+    },
+    "quiz_balls": {
+      "colors_in_bag": "What colors are the balls in the blue bag?",
+      "four_blue_two_red": "4 blue and 2 red.",
+      "three_blue_four_red": "3 blue and 4 red.",
+      "five_blue_two_red": "5 blue and 2 red."
+    },
+    "quiz_peers": {
+      "what_will_you_observe": "What will you observe to help you learn which bag the computer chose?",
+      "one_ball_few_peers": "One ball and a few peers' guesses.",
+      "two_balls": "Two balls.",
+      "one_ball_all_peers": "One ball and all peers' guesses."
+    },
+    "intro_practice": {
+      "now_you_will_play": "Now you will play 2 practice games to get used to the rules.",
+      "since_these_rules": "Since these are practice rounds, we will not reward anyone for their performance."
+    },
+    "practice_game_video": {
+      "practice_game": "Practice Game.",
+      "explanation": "Explanation.",
+      "score": "Score.",
+      "feel_free": "Feel free to watch the video again to remind yourself of the rules."
+    },
+    "practice_game_first_round": {
+      "round": "Round",
+      "the_computer_chose": "The computer chose a bag and split the balls randomly to each player.",
+      "your_ball_is_red": "Your ball is RED.",
+      "your_ball_is_blue": "Your ball is BLUE.",
+      "guess_color": "Guess the color of the bag:",
+      "red": "RED.",
+      "blue": "BLUE."
+    },
+    "practice_game_other_rounds": {
+      "see_what_others_guessed": "See what some other players guessed in the last round:",
+      "code_guessed_red": "Code guessed RED.",
+      "code_guessed_blue": "Code guessed BLUE.",
+      "name_guessed_red": "Name guessed RED.",
+      "name_guessed_blue": "Name guessed BLUE.",
+      "your_guess_was_red": "Your guess in the last round was RED.",
+      "your_guess_was_blue": "Your guess in the last round was BLUE."
+    },
+    "practice_game_results": {
+      "results": "Results",
+      "you_won": "You won!",
+      "better_luck": "Better luck next time!",
+      "the_computer_chose_red": "The computer chose the RED bag.",
+      "the_computer_chose_blue": "The computer chose the BLUE bag."
+    },
+    "real_game_intro": {
+      "now_we_practiced": "Now that we practiced, we will play the real games.",
+      "get_ready": "Get ready to win and earn money!",
+      "if_you_win": "If you win in this game, {X} points will be added to your score and final reward.",
+      "game": "Game",
+      "added_points": "{X} points will be added to your final reward."
+    },
+    "different_game_intro": {
+      "different_version": "Now, we will play a different version of the game.",
+      "instead_of": "Instead of assigning you the peers you observe randomly, we will let you choose the players you observe."
+    },
+    "different_game_choices": {
+      "now_you_can_observe": "Now you can choose the players you will observe in the following rounds in this game.",
+      "please_choose_players": "Please choose {X} players",
+      "player_one": "Player 1:",
+      "player_two": "Player 2:",
+      "player_three": "Player 3:"
+    },
+    "survey": {
+      "before_we_are_done": "Before we are done, we want to ask you a few short questions about how you played today.",
+      "survey_page": "Survey Page"
+    },
+    "final_score": {
+      "congratulations": "Congratulations!",
+      "you_guessed_correctly": "You guessed correctly in {X} games, and earned {x} points, which means you made extra.",
+      "denars": "{X} denars!",
+      "ask_your_teachers": "Ask your teachers about getting your reward!"
+    },
+    "thanks_screen": {
+      "thanks": "Thanks for playing!",
+      "have_a_great_day": "Have a great day!"
+    }
   }
 }
