--- a/prijateli_tree/app/languages/en.json
+++ b/prijateli_tree/app/languages/en.json
@@ -1,5 +1,5 @@
 {
-  "EN": {
+  "en": {
     "different_game_choices": {
       "now_you_can_observe": "Now you can choose the players you will observe in the following rounds in this game.",
       "player_one": "Player 1:",
@@ -17,6 +17,37 @@
       "denars": "{X} denars!",
       "you_guessed_correctly": "You guessed correctly in {X} games, and earned {x} points, which means you made extra."
     },
+    "game_first_round": {
+      "blue": "BLUE.",
+      "guess_color": "Guess the color of the bag:",
+      "red": "RED.",
+      "round": "Round",
+      "the_computer_chose": "The computer chose a bag and split the balls randomly to each player.",
+      "your_ball_is_blue": "Your ball is BLUE.",
+      "your_ball_is_red": "Your ball is RED."
+    },
+    "game_other_rounds": {
+      "code_guessed_blue": "Code guessed BLUE.",
+      "code_guessed_red": "Code guessed RED.",
+      "name_guessed_blue": "Name guessed BLUE.",
+      "name_guessed_red": "Name guessed RED.",
+      "see_what_others_guessed": "See what some other players guessed in the last round:",
+      "your_guess_was_blue": "Your guess in the last round was BLUE.",
+      "your_guess_was_red": "Your guess in the last round was RED."
+    },
+    "game_results": {
+      "better_luck": "Better luck next time!",
+      "results": "Results",
+      "the_computer_chose_blue": "The computer chose the BLUE bag.",
+      "the_computer_chose_red": "The computer chose the RED bag.",
+      "you_won": "You won!"
+    },
+    "game_video": {
+      "explanation": "Explanation.",
+      "feel_free": "Feel free to watch the video again to remind yourself of the rules.",
+      "game": "Practice Game.",
+      "score": "Score."
+    },
     "homepage": {
       "facilitator_password": "Facilitator Password",
       "facilitator_username": "Facilitator Username",
@@ -29,37 +60,6 @@
     "intro_practice": {
       "now_you_will_play": "Now you will play 2 practice games to get used to the rules.",
       "since_these_rules": "Since these are practice rounds, we will not reward anyone for their performance."
-    },
-    "practice_game_first_round": {
-      "blue": "BLUE.",
-      "guess_color": "Guess the color of the bag:",
-      "red": "RED.",
-      "round": "Round",
-      "the_computer_chose": "The computer chose a bag and split the balls randomly to each player.",
-      "your_ball_is_blue": "Your ball is BLUE.",
-      "your_ball_is_red": "Your ball is RED."
-    },
-    "practice_game_other_rounds": {
-      "code_guessed_blue": "Code guessed BLUE.",
-      "code_guessed_red": "Code guessed RED.",
-      "name_guessed_blue": "Name guessed BLUE.",
-      "name_guessed_red": "Name guessed RED.",
-      "see_what_others_guessed": "See what some other players guessed in the last round:",
-      "your_guess_was_blue": "Your guess in the last round was BLUE.",
-      "your_guess_was_red": "Your guess in the last round was RED."
-    },
-    "practice_game_results": {
-      "better_luck": "Better luck next time!",
-      "results": "Results",
-      "the_computer_chose_blue": "The computer chose the BLUE bag.",
-      "the_computer_chose_red": "The computer chose the RED bag.",
-      "you_won": "You won!"
-    },
-    "practice_game_video": {
-      "explanation": "Explanation.",
-      "feel_free": "Feel free to watch the video again to remind yourself of the rules.",
-      "practice_game": "Practice Game.",
-      "score": "Score."
     },
     "quiz_balls": {
       "colors_in_bag": "What colors are the balls in the blue bag?",
